--- a/lang/locales/en/common.json
+++ b/lang/locales/en/common.json
@@ -89,10 +89,10 @@
   },
   "about": {
     "head": {
-      "headerTitle": "About Crown London Institute",
+      "headerTitle": "About London Crown Institute of Training",
       "headerSubtitle": "Empowering Professionals, Transforming Futures.",
       "whatWeDoTitle": "What we do",
-      "whatWeDoDescription": "Crown London Institute is a premier training provider committed to delivering high-quality professional development programs. Based in the heart of London, we specialize in equipping individuals and organizations with the skills and knowledge required to excel in today’s dynamic business environment. Our courses are designed to meet the evolving needs of professionals across various industries, ensuring that they stay ahead in an increasingly competitive world.",
+      "whatWeDoDescription": "London Crown Institute of Training is a premier training provider committed to delivering high-quality professional development programs. Based in the heart of London, we specialize in equipping individuals and organizations with the skills and knowledge required to excel in today’s dynamic business environment. Our courses are designed to meet the evolving needs of professionals across various industries, ensuring that they stay ahead in an increasingly competitive world.",
       "stats": {
         "satisfaction": "Course Satisfaction Rate",
         "trained": "Professionals Trained",
@@ -100,7 +100,7 @@
         "repeatClients": "Repeat Clients"
       },
       "missionTitle": "Our Mission",
-      "missionDescription": "At Crown London Institute, our mission is to empower professionals and organizations through cutting-edge training programs that foster innovation, leadership, and excellence. We believe that continuous learning is the key to success, and we are dedicated to providing practical, industry-relevant education that enhances career growth and business performance.",
+      "missionDescription": "At London Crown Institute of Training, our mission is to empower professionals and organizations through cutting-edge training programs that foster innovation, leadership, and excellence. We believe that continuous learning is the key to success, and we are dedicated to providing practical, industry-relevant education that enhances career growth and business performance.",
       "offerTitle": "What We Offer",
       "offer": {
         "corporateTrainingTitle": "Corporate Training",
@@ -127,7 +127,7 @@
   },
   "contact": {
     "headerTitle": "Contact Us",
-    "introText": "At Crown London Institute, we're committed to assisting you at every stage. If you have any questions about our courses or services or need further information, simply fill out the form below with a brief description of your inquiry, and we'll get back to you promptly.",
+    "introText": "At London Crown Institute of Training, we're committed to assisting you at every stage. If you have any questions about our courses or services or need further information, simply fill out the form below with a brief description of your inquiry, and we'll get back to you promptly.",
     "formTitleI": "Get in",
     "formTitleII": "Touch",
     "form": {
@@ -145,8 +145,8 @@
     "title": "Privacy Policy",
     "sections": {
       "introduction": {
-        "title": "Crown London Institute",
-        "content": "Effective Date: 01-February-2025\n\nCrown London Institute (\"we,\" \"our,\" or \"us\") is committed to protecting your privacy and ensuring that your personal data is handled securely and in compliance with applicable UK data protection laws, including the UK General Data Protection Regulation (UK GDPR) and the Data Protection Act 2018.\n\nThis Privacy Policy explains how we collect, use, store, and protect your personal data when you register for our training courses or interact with our services."
+        "title": "London Crown Institute of Training",
+        "content": "Effective Date: 01-February-2025\n\nLondon Crown Institute of Training (\"we,\" \"our,\" or \"us\") is committed to protecting your privacy and ensuring that your personal data is handled securely and in compliance with applicable UK data protection laws, including the UK General Data Protection Regulation (UK GDPR) and the Data Protection Act 2018.\n\nThis Privacy Policy explains how we collect, use, store, and protect your personal data when you register for our training courses or interact with our services."
       },
       "information-we-collect": {
         "title": "1. Information We Collect",
@@ -174,7 +174,7 @@
       },
       "contact": {
         "title": "7. Contact Us",
-        "content": "If you have any questions or wish to exercise your rights, please contact us at:\n\nCrown London Institute\n6th Floor, 2 Kingdom St, London W2 6BD, United Kingdom\nEmail: privacy@clinstitute.co.uk"
+        "content": "If you have any questions or wish to exercise your rights, please contact us at:\n\nLondon Crown Institute of Training\n6th Floor, 2 Kingdom St, London W2 6BD, United Kingdom\nEmail: privacy@clinstitute.co.uk"
       },
       "updates": {
         "title": "8. Updates to This Policy",
