Update CourseDetail component to use the correct text key for city selection and add missing translation for 'Select a City'

--- a/lang/locales/en/common.json
+++ b/lang/locales/en/common.json
@@ -280,6 +280,7 @@
     "noCertificate": "No Certificate",
     "date": "Date",
     "selectDate": "Select a Date",
+    "selectCity": "Select a City",
     "city": "City",
     "registerNow": "Register Now",
     "englishArabic": "English / Arabic"
